[project]
name = "scrutiny-api-sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Fischer",email = "robert@fischer3.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "scrutiny_api_sentinel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
httpx = "^0.24.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
numpy = "^1.24.2"
python-multipart = "^0.0.6"
pydantic = "^1.10.7"
joblib = "^1.2.0"
aiofiles = "^23.1.0"
motor = "^3.1.1"
influxdb-client = "^1.36.1"
websockets = "^11.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api-sentinel = "api_sentinel.main:run"